# trace-storyboard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: agent-trace.jsonl
src/trace_storyboard/: __init__.py  __main__.py  cli.py  core.py
tests/: test_trace_storyboard.py
